#  AUTHOR: Roman Bergman <roman.bergman@protonmail.com>
# RELEASE: 0.0.1
# LICENSE: AGPL3.0

[metadata]
name = leasewebrestapi
version = file: VERSION
description = Automate and Integrate your infrastructure with Leaseweb API.
author = Roman Bergman
author_email = roman.bergman@protonmail.com
maintainer = Roman Bergman
license = AGPL3.0

[options]
packages = find:
install_requires =
    argparse
    requests
